tests/outref/TGB21_errors_customers.ref

-- Below query's OrderBy has incorrect expression. It is supposed to match or build upon the one in GroupBy.
select NOT (3 >= customers.customer_id) from customers group by NOT (3 >= customers.customer_id) order by (3 >= customers.customer_id);

-- Below query's Having clause has incorrect expression. It is supposed to match or build upon the one in GroupBy.
select NOT (3 >= customers.customer_id) from customers group by NOT (3 >= customers.customer_id) having (3>= customers.customer_id);

-- Both OrderBy and Having clause are incorrect
select NOT (3 >= customers.customer_id) from customers group by NOT (3 >= customers.customer_id) having (3>= customers.customer_id) order by (3 >= customers.customer_id);

-- Below query validates that GroupBy expression forms the smallest expression element which having clause can use in the presence of GroupBy
SELECT id+1 from names group by id+1 having id=1;
[ERROR] PATH:LINENUM DATE TIME : ERR_GROUP_BY_OR_AGGREGATE_FUNCTION : Column CUSTOMER_ID must appear in the GROUP BY clause or be used in an aggregate function
Error with syntax near (line 1, column 113):

select NOT (3 >= customers.customer_id) from customers group by NOT (3 >= customers.customer_id) order by (3 >= customers.customer_id);
                                                                                                                ^^^^^^^^^^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select NOT (3 >= customers.customer_id) from customers group by NOT (3 >= customers.customer_id) order by (3 >= customers.customer_id);
[ERROR] PATH:LINENUM DATE TIME : ERR_GROUP_BY_OR_AGGREGATE_FUNCTION : Column CUSTOMER_ID must appear in the GROUP BY clause or be used in an aggregate function
Error with syntax near (line 1, column 110):

select NOT (3 >= customers.customer_id) from customers group by NOT (3 >= customers.customer_id) having (3>= customers.customer_id);
                                                                                                             ^^^^^^^^^^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select NOT (3 >= customers.customer_id) from customers group by NOT (3 >= customers.customer_id) having (3>= customers.customer_id);
[ERROR] PATH:LINENUM DATE TIME : ERR_GROUP_BY_OR_AGGREGATE_FUNCTION : Column CUSTOMER_ID must appear in the GROUP BY clause or be used in an aggregate function
Error with syntax near (line 1, column 110):

select NOT (3 >= customers.customer_id) from customers group by NOT (3 >= customers.customer_id) having (3>= customers.customer_id) order by (3 >= customers.customer_id);
                                                                                                             ^^^^^^^^^^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_GROUP_BY_OR_AGGREGATE_FUNCTION : Column CUSTOMER_ID must appear in the GROUP BY clause or be used in an aggregate function
Error with syntax near (line 1, column 148):

select NOT (3 >= customers.customer_id) from customers group by NOT (3 >= customers.customer_id) having (3>= customers.customer_id) order by (3 >= customers.customer_id);
                                                                                                                                                   ^^^^^^^^^^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select NOT (3 >= customers.customer_id) from customers group by NOT (3 >= customers.customer_id) having (3>= customers.customer_id) order by (3 >= customers.customer_id);
[ERROR] PATH:LINENUM DATE TIME : ERR_GROUP_BY_OR_AGGREGATE_FUNCTION : Column ID must appear in the GROUP BY clause or be used in an aggregate function
Error with syntax near (line 1, column 45):

SELECT id+1 from names group by id+1 having id=1;
                                            ^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT id+1 from names group by id+1 having id=1;

